fix: setting transient "state" in readResolve()